# moistureSensor

./: CMakeLists.txt  hdlc.c  hdlc.h  main.c  settings.c  settings.h  twiInterface.c  twiInterface.h
cmake/: toolchain.cmake
uartBridge/: CMakeLists.txt  main.c  rs232.c  rs232.h
